--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+		<script src="palette.js"></script>
 		<script src="sketch.js"></script>
 	</head>
 	<body>
