Fixed addition issue

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 		<script src="sketch.js"></script>
 	</head>
 	<body>
-		<span><input type="text" name="A1" id="A1"><input type="text" name="A2" id="A2"><input type="text" name="A3" id="A3"><input type="text" name="A4" id="A4"></span>
-		<span><input type="text" name="B1" id="B1"><input type="text" name="B2" id="B2"><input type="text" name="B3" id="B3"><input type="text" name="B4" id="B4"></span>
-		<span><input type="text" name="C1" id="C1"><input type="text" name="C2" id="C2"><input type="text" name="C3" id="C3"><input type="text" name="C4" id="C4"></span>
-		<span><input type="text" name="D1" id="D1"><input type="text" name="D2" id="D2"><input type="text" name="D3" id="D3"><input type="text" name="D4" id="D4"></span>
+		<div class="inputs">
+			<span><input type="text" name="A1" id="A1" value="0"><input type="text" name="A2" id="A2" value="0"><input type="text" name="A3" id="A3" value="0"><input type="text" name="A4" id="A4" value="0"></span>
+			<span><input type="text" name="B1" id="B1" value="0"><input type="text" name="B2" id="B2" value="0"><input type="text" name="B3" id="B3" value="0"><input type="text" name="B4" id="B4" value="0"></span>
+			<span><input type="text" name="C1" id="C1" value="0"><input type="text" name="C2" id="C2" value="0"><input type="text" name="C3" id="C3" value="0"><input type="text" name="C4" id="C4" value="0"></span>
+			<span><input type="text" name="D1" id="D1" value="0"><input type="text" name="D2" id="D2" value="0"><input type="text" name="D3" id="D3" value="0"><input type="text" name="D4" id="D4" value="0"></span>
+		</div>
 	</body>
 </html>
