DOI link update

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</div>
 
 		<footer>
-			<p>Adapted from Charlton‐Perez, A. and Dacre, H. (2011), Lewis Fry Richardson's forecast factory – for real. Weather, 66: 52-54. doi:10.1002/wea.670</p>
+			<p>Adapted from Charlton‐Perez, A. and Dacre, H. (2011), Lewis Fry Richardson's forecast factory – for real. Weather, 66: 52-54. doi:<a href="https://doi.org/10.1002/wea.670">10.1002/wea.670</a></p>
 			<img src="NUSTEMLogo.png" alt"nustem logo"/>
 		</footer>
 	</body>
