--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</span>
 		</div>
 
-		<div class="switch">
+		<div class="select">
 			<div class="youbtn">
 				<h3>You</h3>
 				<button type="button" onclick="setTo4HoursYou()">4 Hours</button>
@@ -74,6 +74,11 @@
 				<button type="button" onclick="setTo2HoursYou()">2 Hours</button>
 				<button type="button" onclick="setTo1HourYou()">1 Hour</button>
 				<button type="button" onclick="setToInitialYou()">Initial</button>
+				<!-- Rectangular switch -->
+				<label class="switch">
+				  <input type="checkbox" class="save">
+				  <span class="slider"></span>
+				</label>
 			</div>
 
 			<div class="computerbtn">
